--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ button {
 
 img{
     display: block;
-    max-width: 550px;
+    max-width: 1000px;
     max-height: 290px;
     margin-right: 200px;
     margin-left: auto;
@@ -88,4 +88,108 @@ img{
     flex-direction: column;
     flex: 1 1 0;
     min-width: 0;
+}
+
+#randominfo {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    text-align: center;
+    margin: 40px 0 40px 0;
+}
+.containers{
+    display: flex;
+    height: 600px;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;  
+}
+
+.box{
+    border: 4px solid #3882F6;
+    height: 200px;
+    width: 200px;
+    border-radius: 25px;
+    margin-top: -350px;
+}
+
+ul#subtext{
+  display: flex;
+  list-style-type: none; 
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+  margin-top: -350px;
+}
+
+li#sub{
+    height: 200px;
+    width: 200px;
+    text-align: center;
+    font-size: 18px;
+    color: #1F2937;
+}
+
+.quote{
+    height: 200px;
+    background-color: #E5E7EB;
+    padding: 200px 575px 200px 575px;
+}
+
+.subquote{
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #344052;
+}
+.thor{
+   font-size: 20px;
+   font-weight: bold;
+   text-align: right;
+}
+
+.ad{
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bluebox{
+    background-color: #3882F6;
+    height: 300px;
+    width: 1500px;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+}
+
+.call{
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: bold;
+    margin-right: 205px; 
+    margin-top: 10px;
+}
+
+.Sign{
+    color: #F9FAF8;
+    font-size: 18px;
+
+}
+.adbutton{
+    border: 2px solid #F9FaF8;
+    width: 120px;
+    margin-top: 200px;
+}
+
+.footer{
+    height: 100px;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
